fixed player bar bug and styled scrollbar

--- a/front-music-on/src/app/app.component.css
+++ b/front-music-on/src/app/app.component.css
@@ -7,6 +7,10 @@ mat-toolbar > span {
   margin: 10px;
 }
 
+mat-toolbar {
+  height: 6vh;
+}
+
 app-main-screen {
   height: 100%;
 }
