--- a/front-music-on/src/app/main-screen/player-bar/player-bar.component.css
+++ b/front-music-on/src/app/main-screen/player-bar/player-bar.component.css
@@ -1,5 +1,5 @@
 mat-toolbar {
-  height: 100px;
+  height: 12vh;
   display: flex;
   justify-content: center;
 }
